fix: Fixed text overflow issue in links of menu items.

--- a/src/components/program/styles/_programDetail.scss
+++ b/src/components/program/styles/_programDetail.scss
@@ -71,3 +71,7 @@
     transform: translate3d(0,44px, 0) !important;
   }
 }
+
+.wrap-word{
+  white-space: break-spaces !important;
+}
